# art-portfolio

./: .gitignore  docker-compose.yml  pyproject.toml
src/: manage.py
src/apps/core/: admin.py  context_processors.py  models.py  utils.py
src/apps/core/migrations/: 0001_initial.py
src/apps/portfolio/: admin.py  models.py  urls.py  views.py
src/apps/portfolio/migrations/: 0001_initial.py
src/apps/users/: models.py
src/apps/users/migrations/: 0001_initial.py
src/config/settings/: base.py
src/static/mycss/: main.css
src/static/myjs/: main.js
src/templates/: base.html
src/templates/portfolio/: artwork_detail.html  category_detail.html  home.html
